19012
{code}
scala> q"f(..$Nil)"
<console>:33: error: Can't unquote scala.collection.immutable.Nil.type with .., bottom type values often indicate programmer mistake
              q"f(..$Nil)"
                     ^
{code}
